objects/Engineer_Checklist__c/Engineer_Checklist__c.object-meta.xml
<CustomObject>
    <description>Onsite checklist</description>
    <label>Service Sheet</label>
    <nameField>
        <displayFormat>SS2{000000}</displayFormat>
        <label>Service Sheet No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>