objects/Engineer_Checklist__c/fields/A_C_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>A_C_Travel_Time__c</fullName>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>