objects/Engineer_Checklist__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <formula>Site__r.Parent.SAGE_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account No</label>
    <type>Text</type>
</CustomField>