objects/Engineer_Checklist__c/fields/Air_supply_regulator_pressure__c.field-meta.xml
<CustomField>
    <fullName>Air_supply_regulator_pressure__c</fullName>
    <label>Pressure air regulator set at(Bar)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>