objects/Engineer_Checklist__c/fields/Airline_leak_test_completed__c.field-meta.xml
<CustomField>
    <fullName>Airline_leak_test_completed__c</fullName>
    <label>Airline leak test completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>