objects/Engineer_Checklist__c/fields/All_debris_cleared__c.field-meta.xml
<CustomField>
    <fullName>All_debris_cleared__c</fullName>
    <label>All Debris Cleared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>