objects/Engineer_Checklist__c/fields/ALUnit_Qty__c.field-meta.xml
<CustomField>
    <fullName>ALUnit_Qty__c</fullName>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>