objects/Engineer_Checklist__c/fields/ALUnit_Re_Charged__c.field-meta.xml
<CustomField>
    <fullName>ALUnit_Re_Charged__c</fullName>
    <label>Re-Charged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>