objects/Engineer_Checklist__c/fields/Amalgam_Separation__c.field-meta.xml
<CustomField>
    <fullName>Amalgam_Separation__c</fullName>
    <label>Amalgam Separation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>