objects/Engineer_Checklist__c/fields/Annual_Service_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Service_Due_Date__c</fullName>
    <formula>Visit__r.Annual_Service_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Service Due Date</label>
    <type>Date</type>
</CustomField>