objects/Engineer_Checklist__c/fields/Arm_reach_sufficient__c.field-meta.xml
<CustomField>
    <fullName>Arm_reach_sufficient__c</fullName>
    <label>Arm reach sufficient</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>