objects/Engineer_Checklist__c/fields/Arms_balanced__c.field-meta.xml
<CustomField>
    <fullName>Arms_balanced__c</fullName>
    <label>Arms balanced/not drifting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>