objects/Engineer_Checklist__c/fields/Assest_Id__c.field-meta.xml
<CustomField>
    <fullName>Assest_Id__c</fullName>
    <formula>Visit__r.Asset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assest Id</label>
    <type>Text</type>
</CustomField>