objects/Engineer_Checklist__c/fields/Audible_error_Signal__c.field-meta.xml
<CustomField>
    <fullName>Audible_error_Signal__c</fullName>
    <label>Audible error Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>