objects/Engineer_Checklist__c/fields/Call_Out__c.field-meta.xml
<CustomField>
    <fullName>Call_Out__c</fullName>
    <label>Call Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>