objects/Engineer_Checklist__c/fields/CALL_OUT_CB__c.field-meta.xml
<CustomField>
    <fullName>CALL_OUT_CB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CALL OUT</label>
    <type>Checkbox</type>
</CustomField>