objects/Engineer_Checklist__c/fields/Capacity_liters__c.field-meta.xml
<CustomField>
    <fullName>Capacity_liters__c</fullName>
    <label>Capacity litres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>