objects/Engineer_Checklist__c/fields/Change_to_safe_operating_limit__c.field-meta.xml
<CustomField>
    <fullName>Change_to_safe_operating_limit__c</fullName>
    <label>Change to safe operating limit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>