objects/Engineer_Checklist__c/fields/Checked_customer_handpieces_fit__c.field-meta.xml
<CustomField>
    <fullName>Checked_customer_handpieces_fit__c</fullName>
    <label>Checked customer handpieces fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>