objects/Engineer_Checklist__c/fields/Checked_Water_Quality__c.field-meta.xml
<CustomField>
    <fullName>Checked_Water_Quality__c</fullName>
    <label>Checked Water Quality Leakage Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>