objects/Engineer_Checklist__c/fields/Clean_and_tidy_cupboard__c.field-meta.xml
<CustomField>
    <fullName>Clean_and_tidy_cupboard__c</fullName>
    <label>Clean and tidy cupboard?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>