objects/Engineer_Checklist__c/fields/Cleaned_Chamber_Screen_and_tank__c.field-meta.xml
<CustomField>
    <fullName>Cleaned_Chamber_Screen_and_tank__c</fullName>
    <label>Cleaned Chamber,Screen and tank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>