objects/Engineer_Checklist__c/fields/Condition_Of_Hoses__c.field-meta.xml
<CustomField>
    <fullName>Condition_Of_Hoses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condition Of Hoses</label>
    <type>Checkbox</type>
</CustomField>