objects/Engineer_Checklist__c/fields/Condition_of_parts_examined__c.field-meta.xml
<CustomField>
    <fullName>Condition_of_parts_examined__c</fullName>
    <label>Condition of parts examined</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>