objects/Engineer_Checklist__c/fields/Congestion_Charge__c.field-meta.xml
<CustomField>
    <fullName>Congestion_Charge__c</fullName>
    <label>Congestion Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>