objects/Engineer_Checklist__c/fields/Construction_standard__c.field-meta.xml
<CustomField>
    <fullName>Construction_standard__c</fullName>
    <label>Construction standard</label>
    <length>100</length>
    <type>Text</type>
</CustomField>