objects/Engineer_Checklist__c/fields/Copy_Email_for_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Copy_Email_for_Sheet__c</fullName>
    <inlineHelpText>If you add an email address to this field, then it will send a copy of the service sheet to that email address. Note you can use these in views. Not Available to technicians</inlineHelpText>
    <label>Copy Email for Sheet</label>
    <type>Email</type>
</CustomField>