objects/Engineer_Checklist__c/fields/Corbon_Filter__c.field-meta.xml
<CustomField>
    <fullName>Corbon_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corbon Filter</label>
    <type>Checkbox</type>
</CustomField>