objects/Engineer_Checklist__c/fields/Cup_Filler__c.field-meta.xml
<CustomField>
    <fullName>Cup_Filler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cup Filler</label>
    <type>Checkbox</type>
</CustomField>