objects/Engineer_Checklist__c/fields/Customer_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Signature__c</fullName>
    <label>Customer&apos;s Signature</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>