objects/Engineer_Checklist__c/fields/Customer_training_complete__c.field-meta.xml
<CustomField>
    <fullName>Customer_training_complete__c</fullName>
    <label>Customer training complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>