objects/Engineer_Checklist__c/fields/Date_after_system_may_not_used__c.field-meta.xml
<CustomField>
    <fullName>Date_after_system_may_not_used__c</fullName>
    <inlineHelpText>Date after system should be 2 years</inlineHelpText>
    <label>Date after system may not be used</label>
    <type>Date</type>
</CustomField>