objects/Engineer_Checklist__c/fields/Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Format__c</fullName>
    <formula>Text(Year(Date__c))&amp;&quot;.&quot;&amp;
if(Month(Date__c)&lt;10,&apos;0&apos;&amp;Text(Month(Date__c)),text(Month(Date__c)))
&amp;&quot;.&quot;&amp;
if(Day(Date__c)&lt;10,&apos;0&apos;&amp;Text(Day(Date__c)),text(Day(Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Format</label>
    <type>Text</type>
</CustomField>