objects/Engineer_Checklist__c/fields/Date_of_Examination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Examination__c</fullName>
    <label>Date of Examination</label>
    <type>Date</type>
</CustomField>