objects/Engineer_Checklist__c/fields/Date_of_installation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_installation__c</fullName>
    <label>Date of installation</label>
    <type>Date</type>
</CustomField>