objects/Engineer_Checklist__c/fields/Date_of_Manufacture_Delivery_Unit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Manufacture_Delivery_Unit__c</fullName>
    <label>Date of Manufacture (Delivery Unit)</label>
    <type>Date</type>
</CustomField>