objects/Engineer_Checklist__c/fields/Date_Of_System_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_System_Manufacture__c</fullName>
    <label>Date Of Manufacture</label>
    <type>Date</type>
</CustomField>