objects/Engineer_Checklist__c/fields/Date_pressure_vessel_test_due__c.field-meta.xml
<CustomField>
    <fullName>Date_pressure_vessel_test_due__c</fullName>
    <label>Date pressure vessel test due</label>
    <type>Date</type>
</CustomField>