objects/Engineer_Checklist__c/fields/Date_pressure_vessel_test_due_F__c.field-meta.xml
<CustomField>
    <fullName>Date_pressure_vessel_test_due_F__c</fullName>
    <formula>Date_of_installation__c +730</formula>
    <label>Date pressure vessel test due</label>
    <type>Date</type>
</CustomField>