objects/Engineer_Checklist__c/fields/Date_Service_Due2__c.field-meta.xml
<CustomField>
    <fullName>Date_Service_Due2__c</fullName>
    <label>Date Service Due</label>
    <length>25</length>
    <type>Text</type>
</CustomField>