objects/Engineer_Checklist__c/fields/Date_service_due__c.field-meta.xml
<CustomField>
    <fullName>Date_service_due__c</fullName>
    <formula>Date_of_installation__c +365</formula>
    <label>Date service due</label>
    <type>Date</type>
</CustomField>