objects/Engineer_Checklist__c/fields/Date_Test_Done__c.field-meta.xml
<CustomField>
    <fullName>Date_Test_Done__c</fullName>
    <label>Date</label>
    <type>TextArea</type>
</CustomField>