objects/Engineer_Checklist__c/fields/Date_to_complete_repairs_by__c.field-meta.xml
<CustomField>
    <fullName>Date_to_complete_repairs_by__c</fullName>
    <label>Date to complete repairs by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>