objects/Engineer_Checklist__c/fields/Dead_man_Operation_of_exposure_Switch__c.field-meta.xml
<CustomField>
    <fullName>Dead_man_Operation_of_exposure_Switch__c</fullName>
    <label>&apos;Dead-man&apos; Operation of exposure Switch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>