objects/Engineer_Checklist__c/fields/Delivery_System_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Delivery_System_Manufacture__c</fullName>
    <label>Delivery System Manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>