objects/Engineer_Checklist__c/fields/Delivery_System_Model__c.field-meta.xml
<CustomField>
    <fullName>Delivery_System_Model__c</fullName>
    <label>Delivery System Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>