objects/Engineer_Checklist__c/fields/Delivery_System_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_System_Serial_No__c</fullName>
    <label>Delivery System Serial No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>