objects/Engineer_Checklist__c/fields/Delivery_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_System_Type__c</fullName>
    <label>Delivery System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Mt</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Cab.Mt.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>