objects/Engineer_Checklist__c/fields/Delivery_unit_operation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_unit_operation__c</fullName>
    <label>Delivery unit operation/ Stability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See note</fullName>
            </value>
            <value>
                <fullName>N/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>