objects/Engineer_Checklist__c/fields/Dental_Chair_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Dental_Chair_Manufacture__c</fullName>
    <label>Dental Chair Manufacture</label>
    <length>100</length>
    <type>Text</type>
</CustomField>