objects/Engineer_Checklist__c/fields/Dental_Chair_Model__c.field-meta.xml
<CustomField>
    <fullName>Dental_Chair_Model__c</fullName>
    <label>Dental Chair Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>