objects/Engineer_Checklist__c/fields/Dental_Chair_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Dental_Chair_Serial_No__c</fullName>
    <label>Dental Chair Serial No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>