objects/Engineer_Checklist__c/fields/Dental_CRM_used__c.field-meta.xml
<CustomField>
    <fullName>Dental_CRM_used__c</fullName>
    <label>Dental CRM Used</label>
    <length>250</length>
    <type>Text</type>
</CustomField>