objects/Engineer_Checklist__c/fields/Design_pressure__c.field-meta.xml
<CustomField>
    <fullName>Design_pressure__c</fullName>
    <label>Design pressure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>