objects/Engineer_Checklist__c/fields/Design_temperature__c.field-meta.xml
<CustomField>
    <fullName>Design_temperature__c</fullName>
    <label>Design temperature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>