objects/Engineer_Checklist__c/fields/Diameter_mm__c.field-meta.xml
<CustomField>
    <fullName>Diameter_mm__c</fullName>
    <label>Diameter mm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>