objects/Engineer_Checklist__c/fields/Door_seal_condition__c.field-meta.xml
<CustomField>
    <fullName>Door_seal_condition__c</fullName>
    <label>Door seal condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>See Note</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>